<resources>
    <string name="app_name">HaruCampus</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="e_card">一卡通</string>
    <string name="login_username">用户名</string>
    <string name="password">密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_check_code">请输入验证码</string>
    <string name="user">用户</string>
    <string name="trade">商户</string>
    <string name="admin">管理员</string>
    <string name="server_fail">服务器响应失败</string>
    <string name="server_success">服务器响应成功</string>
    <string name="verifyCode_url">http://ecard.avceit.cn/checkCode.action?t=</string>
    <string name="ecard_home_url">http://ecard.avceit.cn/systemInit.action</string>
    <string name="check_verify_code_url">http://ecard.avceit.cn/validateYzm.action?checkCode=</string>
    <string name="express">express</string>
    <string name="express_login_url">http://ecard.avceit.cn/login.action?loginModel=express</string>
    <string name="trade_login_url">http://ecard.avceit.cn/tradeLogin.action?loginModel=trade</string>
    <string name="manager_login_url">http://ecard.avceit.cn/managerLogin.action?loginModel=manager</string>
    <string name="user_error_info">用户名或者密码错误</string>
    <string name="login_model_error">登录模式错误</string>
    <string name="login_resp_regex"><![CDATA[<TITLE>安徽电子信息职业技术学院一卡通WEB系统</TITLE>]]></string>
    <string name="login_success">登录成功</string>
    <string name="default_user_name">学生</string>
    <string name="ecard_option_title1">综合查询</string>
    <string name="compquery">综合查询</string>
    <string name="detailsquery">明细查询</string>
    <string name="balance_query">校园卡余额查询</string>
    <string name="userInfo_query">个人信息查询</string>
    <string name="account_manage">账户管理</string>
    <string name="report_lose">卡片挂失</string>
    <string name="modify_pass">密码修改</string>
    <string name="finanical_payment">财务缴费</string>
    <string name="payment_record">缴费记录</string>
    <string name="payment_item">缴费项目</string>
    <string name="bank_transfer">银行圈存</string>
    <string name="self_transfer">自助圈存</string>
    <string name="query_bank_balance">查询银行余额</string>
    <string name="electricity_payment">购电缴费</string>
    <string name="electricity_pay">房屋购电</string>
    <string name="electricity_query">房屋电量查询</string>
    <string name="electricity_payment_details">用户购电明细</string>
    <string name="query_userInfo_action">http://192.168.1.161:8080/AvceitHaru/AvceitChanger?action=queryUserInfo</string>
</resources>
