<?xml version="1.0" encoding="utf-8"?>
<com.haru.widget.SqueezeboxView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/textSize_optionTitleInfo"
        android:orientation="vertical"
    >
        <com.haru.widget.StrokeTextView
            android:id="@+id/txtVw_queryUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_optionContent"
            android:text="@string/userInfo_query"
            android:layout_margin="5dp"
        />
        <com.haru.widget.StrokeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_optionContent"
            android:text="@string/balance_query"
            android:layout_margin="5dp"
        />
        <com.haru.widget.StrokeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_optionContent"
            android:text="@string/detailsquery"
            android:layout_margin="5dp"
        />
    </LinearLayout>
    <com.haru.widget.StrokeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:textSize="@dimen/textSize_optionTitleInfo"
        android:text="@string/compquery"
    />
</com.haru.widget.SqueezeboxView>